:cake: fix the Content min - height: 0 layout problem

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -89,6 +89,7 @@ code {
 
   .ant-layout-content {
     position: relative;
+    min-height: auto; // override antd min-height: 0;
     // overflow: auto;
   }
 
